--- a/public/admin-login.html
+++ b/public/admin-login.html
@@ -1,32 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Admin Login</title>
+  <!-- Tailwind CSS CDN -->
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
-  <h2>Admin Login</h2>
-  <form onsubmit="login(event)">
-    <input type="password" id="adminPassword" placeholder="Enter admin password" required>
-    <button type="submit">Login</button>
-  </form>
+<body class="bg-gray-50 flex items-center justify-center min-h-screen px-4">
+  <div class="bg-white p-8 rounded-lg shadow-md w-full max-w-sm">
+    <h2 class="text-2xl font-bold mb-6 text-center text-gray-800">Admin Login</h2>
+    <form onsubmit="login(event)" class="space-y-4">
+      <input
+        type="password"
+        id="adminPassword"
+        placeholder="Enter admin password"
+        required
+        class="w-full px-4 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500"
+      />
+      <button
+        type="submit"
+        class="w-full bg-blue-600 hover:bg-blue-700 text-white font-semibold py-2 rounded-md transition-colors duration-200"
+      >
+        Login
+      </button>
+    </form>
+  </div>
+
   <script>
     async function login(e) {
       e.preventDefault();
       const password = document.getElementById('adminPassword').value;
-      const response = await fetch('/admin/login', {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify({ password })
-      });
+      try {
+        const response = await fetch('/admin/login', {
+          method: 'POST',
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify({ password })
+        });
 
-      const result = await response.json();
+        const result = await response.json();
 
-      if (response.ok) {
-        localStorage.setItem('token', result.token);
-        window.location.href = 'admin.html';
-      } else {
-        alert(result.error);
+        if (response.ok) {
+          localStorage.setItem('token', result.token);
+          window.location.href = 'admin.html';
+        } else {
+          alert(result.error);
+        }
+      } catch (error) {
+        alert('Network error, please try again.');
+        console.error(error);
       }
     }
   </script>
