--- a/public/index.html
+++ b/public/index.html
@@ -1,34 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <title>A Party Register Application</title>
-    <link href="styles.css" rel="stylesheet">
+    <script src="https://cdn.tailwindcss.com"></script>
+    <!-- Optional: Remove styles.css if not needed -->
+     <link rel="stylesheet" href="styles.css">
 </head>
-<body onload="toggleFields(); fetchGuests()">
-<h2>2025 End of year meeting & Party Register for AOCOSA 86/92 SET</h2>
-<form onsubmit="submitForm(event)">
-    <label><input type="radio" name="groupType" id="single" value="single" checked onclick="toggleFields()"> Single</label>
-    <label><input type="radio" name="groupType" id="couple" value="couple" onclick="toggleFields()" > Couple</label>
+<body onload="toggleFields(); fetchGuests()" class="bg-gray-50 font-sans min-h-screen p-6">
 
-    <div id="singleName">
-        <label for="single1">Enter name:</label>
-        <input type="text" id="single1" />
+  <h2 class="text-2xl font-bold mb-6 text-center text-gray-800">
+    2025 End of year meeting & Party Register for AOCOSA 86/92 SET
+  </h2>
+<div class="opacity-0 animate-fadeIn max-w-lg sm:max-w-md mx-auto bg-white p-6 rounded-lg shadow-md space-y-6">
+  <form onsubmit="submitForm(event)" class="max-w-lg mx-auto bg-white p-6 rounded-lg shadow-md space-y-4">
+
+    <div class="flex space-x-6 justify-center mb-4">
+      <label class="inline-flex items-center space-x-2">
+        <input type="radio" name="groupType" id="single" value="single" checked onclick="toggleFields()" class="form-radio focus-visible:outline-blue-500 focus-visible:outline-2" />
+        <span>Single</span>
+      </label>
+
+      <label class="inline-flex items-center space-x-2">
+        <input type="radio" name="groupType" id="couple" value="couple" onclick="toggleFields()" class="form-radio focus-visible:outline-blue-500 focus-visible:outline-2"/>
+        <span>Couple</span>
+      </label>
     </div>
 
-    <div id="coupleNames" style="display:none;">
-        <label for="name1">Enter first name (Mr):</label>
-        <input type="text" id="name1" name="name1"/><br/>
-
-        <label for="name2">Enter second name (Mrs):</label>
-        <input type="text" id="name2" name="name2"/>
+    <div id="singleName" class="space-y-1 transition-opacity duration-300">
+      <label for="single1" class="block font-semibold text-gray-700">Enter name:</label>
+      <input type="text" id="single1"  class="w-full border border-gray-300 rounded-md p-2 focus:outline-none focus:ring-2 focus:ring-blue-500 focus-visible:outline-blue-500 focus-visible:outline-2"/>
     </div>
 
-    <br><button type="submit">Submit</button>
-</form>
-<div id="preview">
-    <h3>Registered Guests</h3>
+    <div id="coupleNames" class="space-y-4 hidden opacity-0 transition-opacity duration-300">
+      <div>
+        <label for="name1" class="block font-semibold text-gray-700">Enter first name (Mr):</label>
+        <input type="text" id="name1" name="name1"  class="w-full border border-gray-300 rounded-md p-2 focus:outline-none focus:ring-2 focus:ring-blue-500 focus-visible:outline-blue-500 focus-visible:outline-2"/>
+      </div>
+
+      <div>
+        <label for="name2" class="block font-semibold text-gray-700">Enter second name (Mrs):</label>
+        <input type="text" id="name2" name="name2"  class="w-full border border-gray-300 rounded-md p-2 focus:outline-none focus:ring-2 focus:ring-blue-500 focus-visible:outline-blue-500 focus-visible:outline-2"/>
+      </div>
+    </div>
+
+    <button type="submit" class="w-full bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 rounded-md transition-colors duration-200">
+      Submit
+    </button>
+  </form>
 </div>
-<script src="scripts.js"></script>
+  
+  <div id="preview" class="max-w-4xl mx-auto mt-8 pt-4 border-t border-gray-300 bg-white p-6 rounded-lg shadow-md">
+  <h3 class="text-xl font-semibold text-gray-800 mb-4">Registered Guests</h3>
+  <!-- Your guest list or content will go here -->
+</div>
+
+  <script src="scripts.js"></script>
 </body>
 </html>
