--- a/public/admin-login.html
+++ b/public/admin-login.html
@@ -5,6 +5,7 @@
   <title>Admin Login</title>
   <!-- Tailwind CSS CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
+     <link rel="icon" href="favicon.png" type="image/png">
 </head>
 <body class="bg-gray-50 flex items-center justify-center min-h-screen px-4">
   <div class="bg-white p-8 rounded-lg shadow-md w-full max-w-sm">
