--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Optional: Remove styles.css if not needed -->
      <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="favicon.png" type="image/png">
 </head>
 <body onload="toggleFields(); fetchGuests()" class="bg-gray-50 font-sans min-h-screen p-6">
 
