--- a/public/admin.html
+++ b/public/admin.html
@@ -10,6 +10,8 @@
     window.location.replace('admin-login.html'); // replace avoids back button confusion
   }
   </script>
+     <link rel="icon" href="favicon.png" type="image/png">
+
 </head>
 <body class="font-sans m-8">
 
