--- a/public/index.html
+++ b/public/index.html
@@ -51,10 +51,10 @@
   </form>
 </div>
   
-  <div id="preview" class="max-w-4xl mx-auto mt-8 pt-4 border-t border-gray-300 bg-white p-6 rounded-lg shadow-md">
+  <!-- <div id="preview" class="max-w-4xl mx-auto mt-8 pt-4 border-t border-gray-300 bg-white p-6 rounded-lg shadow-md">
   <h3 class="text-xl font-semibold text-gray-800 mb-4">Registered Guests</h3>
-  <!-- Your guest list or content will go here -->
-</div>
+   Your guest list or content will go here 
+</div> -->
 
   <script src="scripts.js"></script>
 </body>
